// Copyright Â© 2025 Prabhjot Singh Sethi, All Rights reserved
// Author: Prabhjot Singh Sethi <prabhjot.sethi@gmail.com>

syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/go-core-stack/auth-gateway/api";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0"
    title: "Auth Gateway API Specification"
  }
  external_docs: {
    description: "Auth Gateway API Specification - sample descriptive information"
  }
};

// Service provided to manage users in Tenants
service TenantUser {
  // Get List of existing users in a tenant
  rpc GetUsers(TenantUsersListReq) returns (TenantUsersListResp) {
    option (google.api.http) = {
      get: "/api/auth/v1/tenant/{tenant}/users"
    };
  }

  // Create a new user for the given tenant
  rpc CreateUser(TenantUserCreateReq) returns (TenantUserCreateResp) {
    option (google.api.http) = {
      post: "/api/auth/v1/tenant/{tenant}/user"
      body: "*"
    };
  }

  // Get an existing user for the given tenant
  rpc GetUser(TenantUserGetReq) returns (TenantUserGetResp) {
    option (google.api.http) = {
      get: "/api/auth/v1/tenant/{tenant}/user/{username}"
    };
  }

  // Enable an existing disabled user for the given tenant
  rpc EnableUser(TenantUserEnableReq) returns (TenantUserEnableResp) {
    option (google.api.http) = {
      post: "/api/auth/v1/tenant/{tenant}/user/{username}/enable"
    };
  }

  // Disable an existing enabled user for the given tenant
  rpc DisableUser(TenantUserDisableReq) returns (TenantUserDisableResp) {
    option (google.api.http) = {
      post: "/api/auth/v1/tenant/{tenant}/user/{username}/disable"
    };
  }

  // Update an existing user for the given tenant
  rpc UpdateUser(TenantUserUpdateReq) returns (TenantUserUpdateResp) {
    option (google.api.http) = {
      put: "/api/auth/v1/tenant/{tenant}/user/{username}"
    };
  }

  // Delete an existing user for the given tenant
  rpc DeleteUser(TenantUserDeleteReq) returns (TenantUserDeleteResp) {
    option (google.api.http) = {
      delete: "/api/auth/v1/tenant/{tenant}/user/{username}"
    };
  }

  // List Active sessions, filter by user if provided
  rpc ListUserSessions(TenantUserSessionsListReq) returns (TenantUserSessionsListResp) {
    option (google.api.http) = {
      get: "/api/auth/v1/tenant/{tenant}/sessions"
    };
  }

  // logout user from specific session or all sessions
  rpc LogoutUserSession(TenantUserSessionLogoutReq) returns (TenantUserSessionLogoutResp) {
    option (google.api.http) = {
      post: "/api/auth/v1/tenant/{tenant}/user/{username}/logout"
      body: "*"
    };
  }
}

// Request List of users in a tenant
message TenantUsersListReq {
  // tenant under which the user list is requested
  string tenant = 1;

  // offset from where to start the list of users
  int32 offset = 2;

  // limit the response to specified count
  int32 limit = 3;

  // prefix match to consider
  string search = 4;
}

// user information for the list entry
message TenantUserListEntry {
  // username or user id
  string username = 1;

  // user email
  string email = 2;

  // first name of user
  string firstName = 3;

  // last name of user
  string lastName = 4;

  // is user enabled
  bool enabled = 5;

  // created since
  int64 created = 6;

  // last access by the user
  int64 lastAccess = 7;
}

// Response to the list of users in a tenant
message TenantUsersListResp {
  // number of users in the tenant
  int32 count = 1;

  // items - list of users
  repeated TenantUserListEntry items = 2;
}

// user create request message
message TenantUserCreateReq {
  // tenant under which this user will be created
  string tenant = 1;

  // user ID
  string username = 2;

  // email address of the user
  string email = 3;

  // first name of the user
  string firstname = 4;

  // last name of the user
  string lastname = 5;

  // if the user needs to be created disabled
  bool disabled = 6;

  // temporary first login password to be set for the user
  string password = 7;
}

// response to user create request
message TenantUserCreateResp {
  // username or user id
  string username = 1;

  // user email
  string email = 2;

  // first name of user
  string firstName = 3;

  // last name of user
  string lastName = 4;

  // is user enabled
  bool enabled = 5;
}

// delete user request message
message TenantUserDeleteReq {
  // tenant under which this action needs to be taken
  string tenant = 1;

  // user id which needs to be deleted
  string username = 2;
}

// response to the user delete message
message TenantUserDeleteResp {
}

// get user request message
message TenantUserGetReq {
  // tenant under which this action needs to be taken
  string tenant = 1;

  // user id which needs to be deleted
  string username = 2;
}

// get user response
message TenantUserGetResp {
  // username or user id
  string username = 1;

  // user email
  string email = 2;

  // first name of user
  string firstName = 3;

  // last name of user
  string lastName = 4;

  // is user enabled
  bool enabled = 5;

  // created since
  int64 created = 6;

  // last access by the user
  int64 lastAccess = 7;
}

// user update request message
message TenantUserUpdateReq {
  // tenant under which this user will be created
  string tenant = 1;

  // user ID
  string username = 2;

  // email address of the user
  string email = 3;

  // first name of the user
  string firstname = 4;

  // last name of the user
  string lastname = 5;

  // if the user needs to be created disabled
  bool disabled = 6;
}

// response to user update request
message TenantUserUpdateResp {
  // username or user id
  string username = 1;

  // user email
  string email = 2;

  // first name of user
  string firstName = 3;

  // last name of user
  string lastName = 4;

  // is user enabled
  bool enabled = 5;
}

// enable user request
message TenantUserEnableReq {
  // tenant under consideration
  string tenant = 1;

  // user that needs to be enabled
  string username = 2;
}

// enable user request response
message TenantUserEnableResp {
}

// disable user request
message TenantUserDisableReq {
  // tenant under consideration
  string tenant = 1;

  // user that needs to be disabled
  string username = 2;
}

// disable user request response
message TenantUserDisableResp {
}

// list active sessions request
message TenantUserSessionsListReq {
  // tenant under consideration
  string tenant = 1;

  // user name to filter for
  string username = 2;

  // offset to start from
  int32 offset = 3;

  // limit
  int32 limit = 4;
}

// user session information
message TenantUserSessionInfo {
  // user name
  string username = 1;

  // session id
  string sessionId = 2;

  // start time
  int64 started = 3;

  // last access time
  int64 lastAccess = 4;

  // incoming client ip
  string ip = 5;
}

// response of list active sessions
message TenantUserSessionsListResp {
  // total number of active sessions
  int32 count = 1;

  // list of active sessions
  repeated TenantUserSessionInfo items = 2;
}

// user session logout request
message TenantUserSessionLogoutReq {
  // tenant under consideration
  string tenant = 1;

  // user to be logged out
  string username = 2;

  // specific session id if any needs to be logged out
  // optional, if not specified all sessions are logged out
  string sessionId = 3;
}

// user session logout response
message TenantUserSessionLogoutResp {
}
